# CurrencyCpp

./: CMakeLists.txt  LICENSE  readme.md
.github/workflows/: quality-control.yaml
source/: CMakeLists.txt  currency.hpp  initialization.cpp
source/add/: add.cpp
source/amount/: amount.cpp
source/divide/: divide.cpp
source/equals_to/: equals_to.cpp
source/greater_than/: greater_than.cpp
source/greater_than_or_equal/: greater_than_or_equal.cpp
source/helpers/: helpers.cpp
source/init/: init.cpp
source/is/: is.cpp
source/less_than/: less_than.cpp
source/less_than_or_equal/: less_than_or_equal.cpp
source/multiply/: multiply.cpp
source/percentage/: percentage.cpp
source/precision/: precision.cpp
source/subtract/: subtract.cpp
source/to_unit/: to_unit.cpp
test/: CMakeLists.txt
test/add/: add_test.cc
test/amount/: amount_test.cc
test/divide/: divide_test.cc
test/equals_to/: equals_to_test.cc
test/greater_than/: greater_than_test.cc
test/greater_than_or_equal/: greater_than_or_equal_test.cc
test/init/: init_test.cc
test/is/: is_test.cc
test/less_than/: less_than_test.cc
test/less_than_or_equal/: less_than_or_equal_test.cc
test/multiply/: multiply_test.cc
test/percentage/: percentage_test.cc
test/precision/: precision_test.cc
test/subtract/: subtract_test.cc
test/to_unit/: to_unit_test.cc
